--- a/stories/index.html
+++ b/stories/index.html
@@ -2725,6 +2725,12 @@
       <td><a name="pa0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0294</td>
+      <td><a href="/stories/pa/0294_ਦਾਦੀ-ਦੇ-ਕੇਲੇ_slides.html" target="_blank">ਦਾਦੀ ਦੇ ਕੇਲੇ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/pa/0296_ਟੌਮ-ਕੇਲੇ-ਵੇਚਣ-ਵਾਲਾ_slides.html" target="_blank">ਟੌਮ ਕੇਲੇ ਵੇਚਣ ਵਾਲਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3809,7 +3815,7 @@
       <td>0294</td>
       <td><a href="http://my.africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
