--- a/stories/index.html
+++ b/stories/index.html
@@ -2599,6 +2599,12 @@
       <td><a name="pa0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/pa/0052_ਸਿਮਬੇਗਵਾਇਰ_slides.html" target="_blank">ਸਿਮਬੇਗਵਾਇਰ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0066</td>
       <td><a href="/stories/pa/0066_ਨੌਜ਼ੀਬਿੱਲ-ਅਤੇ-ਤਿੰਨ-ਵਾਲ_slides.html" target="_blank">ਨੌਜ਼ੀਬਿੱਲ ਅਤੇ ਤਿੰਨ ਵਾਲ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3437,7 +3443,7 @@
       <td>0052</td>
       <td><a href="http://my.africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#ko0052">ko</a>, <a href="#tl0052">tl</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#ko0052">ko</a>, <a href="#pa0052">pa</a>, <a href="#tl0052">tl</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
