--- a/stories/index.html
+++ b/stories/index.html
@@ -2911,10 +2911,58 @@
       <td><a name="es0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0067</td>
+      <td><a href="/stories/es/0067_cocinando_slides.html" target="_blank">Cocinando</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0072</td>
+      <td><a href="/stories/es/0072_la-venganza-del-pájaro-miel_slides.html" target="_blank">La venganza del Pájaro Miel</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/es/0087_me-gusta-leer_slides.html" target="_blank">¡Me gusta leer!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0089</td>
+      <td><a href="/stories/es/0089_khalai-le-habla-a-las-plantas_slides.html" target="_blank">Khalai le habla a las plantas</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/es/0095_zama-es-genial_slides.html" target="_blank">¡Zama es genial!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0110</td>
+      <td><a href="/stories/es/0110_una-pequeña-semilla-la-historia-de-wangari-maathai_slides.html" target="_blank">Una Pequeña Semilla: La Historia de Wangari Maathai</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/es/0111_por-qué-los-hipopótamos-no-tienen-pelo_slides.html" target="_blank">¿Por qué los hipopótamos no tienen pelo?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/es/0112_mi-cuerpo_slides.html" target="_blank">Mi cuerpo</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/es/0120_el-pelo_slides.html" target="_blank">El pelo</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0127</td>
@@ -2923,10 +2971,28 @@
       <td><a name="es0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0129</td>
+      <td><a href="/stories/es/0129_el-hermanito-perezoso_slides.html" target="_blank">El hermanito perezoso</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0130</td>
       <td><a href="/stories/es/0130_mi-abuela_slides.html" target="_blank">Mi abuela</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/es/0141_el-pollo-y-el-milpiés_slides.html" target="_blank">El Pollo y el Milpiés.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/es/0156_el-cocodrilo-hambriento_slides.html" target="_blank">El cocodrilo hambriento</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0210</td>
@@ -3539,7 +3605,7 @@
       <td>0067</td>
       <td><a href="http://my.africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#tl0067">tl</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -3551,7 +3617,7 @@
       <td>0072</td>
       <td><a href="http://my.africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -3587,7 +3653,7 @@
       <td>0089</td>
       <td><a href="http://my.africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -3599,7 +3665,7 @@
       <td>0095</td>
       <td><a href="http://my.africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
@@ -3617,25 +3683,25 @@
       <td>0110</td>
       <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
       <td><a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
       <td><a href="http://my.africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://my.africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#es0120">es</a>, <a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
@@ -3671,7 +3737,7 @@
       <td>0129</td>
       <td><a href="http://my.africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#tl0129">tl</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#tl0129">tl</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -3695,7 +3761,7 @@
       <td>0141</td>
       <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#tl0141">tl</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#tl0141">tl</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -3719,7 +3785,7 @@
       <td>0156</td>
       <td><a href="http://my.africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#de0156">de</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
