--- a/audio/no/0095_zama-er-flink_audio-slides.html
+++ b/audio/no/0095_zama-er-flink_audio-slides.html
@@ -108,7 +108,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Jeg er den som slipper inn solen.</p>
+<p>Jeg er den som slipper solen inn.</p>
 <audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/no/0095_zama-er-flink/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
