--- a/stories/index.html
+++ b/stories/index.html
@@ -3211,6 +3211,18 @@
       <td><a name="ru0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0030</td>
+      <td><a href="/stories/ru/0030_чувства_slides.html" target="_blank">Чувства</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0052</td>
+      <td><a href="/stories/ru/0052_симбегвайр_slides.html" target="_blank">Симбегвайр</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ru0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td><a href="/stories/ru/0127_разные-игры_slides.html" target="_blank">Разные игры</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQmg3dXhpTjFYQ3c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4169,7 +4181,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -4187,7 +4199,7 @@
       <td>0052</td>
       <td><a href="http://africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#ko0052">ko</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#ko0052">ko</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
