--- a/stories/ru/0052_симбегвайр_slides.html
+++ b/stories/ru/0052_симбегвайр_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>Симбегвайр - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="симбегвайр" class="slide level1">
+<h1>Симбегвайр</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>Когда мама Симбегвайр умерла, ей было очень грустно. Папа Симбегвайр делал всё для своей дочери. Они снова научились быть счастливыми без мамы Симбегвайр. Каждое утро они садились и говорили о том, что ждёт их сегодня . Каждый вечер они делали ужин вместе. Они мыли посуду, и папа Симбегвайр помогал ей с домашней работой.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>Однажды папа Симбегвайр пришёл домой позже чем обычно. &quot;Где ты, дочка?&quot; позвал он. Симбегвайр побежала к своему отцу. Она остановилась когда увидела, что он держит за руку женцину. &quot;Я хочу познакомить тебя с кем-то особенным, дочка. Это Анита,&quot; сказал он.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>&quot;Привет, Симбегвайр, твой папа много говорил мне о тебе,&quot; сказала Анита. Но она не улыбнулась и не взяла девочку за руку. Папа Симбегвайр был счастлив и взволнован. Он говорил о том, как они будут жить втроём, и о том, какая у них будет хорошая жизнь. &quot;Дочка, я надеюсь, Анита сможет стать тебе матерью,&quot; сказал он.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>Жизнь Симбегвайр изменилась. Теперь у неё не было времени сидеть с папой по утрам. Анита давала ей так много работы по дому, что она уставала слишком сильно, чтобы делать уроки по вечерам. После ужина она сразу шла спать. Только разноцветное одеяло, которое мама подарила Симбегвайр, приносило ей радость. Папа Симбегвайр, похоже, не замечал, что его дочь была несчастлива.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>Через несколько месяцев папа Симбегвайр сказал, что уезжает. &quot;Мне нужно уехать по работе,&quot; сказал он. &quot;Но я знаю, что вы присмотрите друг за другом.&quot; Симбегвайр поникла, но ее папа этого не заметил. Анита ничего не сказала. Она была недовольна.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>Жизнь Симбегвайр стала хуже. Если она не доделывала работу по дому или жаловалась, Анита била её. А за ужином женщина съедала почти всё, и оставляла Симбегвайр только объедки. Каждый вечер Симбегвайр плакала перед сном, обнимая одеяльце своей мамы.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>Однажды утром Симбегвайр проснулась позже чем обычно. &quot;Ленивая девчонка!&quot; закричала Анита. Она скинула Симбегвайр с кровати. Драгоценное одеяльце зацепилось за гвоздь и порвалось пополам.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>Симбегвайр очень расстроилась. Она решила уйти из дома. Она взяла кусочки одеяла её мамы, взяла немного еды и ушла из дома. Она пошла по дороге, по которой уехал её папа.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,89 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>Когда пришёл вечер, она забралась на дерево у ручья и сделала себе постель из веток. Засыпая она пела: &quot;Мама, мама, мама, ты оставила меня. Ты ушла от меня и не вернулась. Папа меня больше не любит. Мама, когда же ты вернёшься? Ты оставила меня.&quot;</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>На следующее утро Симбегвайр снова пропела эту песню. Когда женщины пришли стирать одежду в ручье, они услышали грустную песню, доносящуюся из высокого дерева. Они подумали, что это ветер шумел среди листьев и продолжили работать. Но одна из женщин прислушалась к песне.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>Женщина посмотрела вверх на дерево. Когда она увидела девочку и кусочки разноцветного одеяльца, она заплакала, &quot;Симбегвайр, дочка моего брата!&quot; Другие женщины перестали стирать и помогли Симбегвайр спуститься с дерева. Её тетя обняла девочку и попыталась её успокоить.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>Тётя Симбегвайр взяла девочку к себе домой. Она дала ей тёплой еды и укрыла её маминым одеяльцем. В этот вечер Симбегвайр плакала засыпая, но это были слезы облегчения. Она знала, что тётя о ней позаботится.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>Когда папа Симбегвайр вернулся домой, он увидел, что комната девочки пуста. &quot;Что случилось, Анита?&quot; спросил он её неспокойно. Женщина объяснила, что Симбегвайр ушла из дома. &quot;Я хотела, чтобы она уважала меня,&quot; сказала она. Но, наверное, я была слишком строга. Папа Симбегвайр вышел из дома и пошёл к ручью. Он пошёл дальше к деревне своей сестры, чтобы спросить, не видела ли она Симбегвайр.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>Симбегвайр играла со своими братьями и сёстрами и увидела папу издалека. Она испугалась, что он рассердится и побежала в дом прятаться. Но её папа подошёл к ней и сказал: &quot;Симбегвайр, ты нашла идеальную мать, которая любит и понимает тебя. Я горжусь тобой и люблю тебя.&quot; Они согласились, что Симбегвайр останется с тётей сколько пожелает.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>Её папа навещал её каждый день. Однажды он пришёл с Анитой. Она потянулась к Симбегвайр. &quot;Прости, малыш, я была неправа,&quot; заплакала она. &quot;Дашь мне попробовать ещё раз?&quot; Симбегвайр посмотрела на взволнованное лицо отца. Она медленно шагнула навстречу и обняла Аниту.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>На следующей неделе Анита пригласила Симбегвайр с её братьями, сёстрами и тётей на ужин. Что это был за праздник! Анита приготовила любимые блюда Симбегвайр, и все ели досыта. Потом дети играли, а взрослые разговаривали. Симбегвайр чувствовала себя счастливо и храбро. Она решила что скоро, очень скоро она вернётся домой жить со своим папой и мачехой.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="симбегвайр-1">Симбегвайр</h2>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Ania Voznaia<br> <strong>Language:</strong> Russian<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
